@@ -22,6 +22,8 @@ Revision history for {{$dist->name}}
           Etheridge)
         - the test generated by [MetaTests] is now an author test, not a
           release test (thanks, Karen Etheridge)
+        - all builds now result in a .build/latest symlink (thanks again,
+          Karen)
 
 6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
         - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
